--- a/Leifer_Mendez/proyectos/portafolio2/src/app/sidebar/sidebar.component.html
+++ b/Leifer_Mendez/proyectos/portafolio2/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,8 @@
-<p>
-  sidebar works!
-</p>
+<div class="wrapper">
+  <div class="pre-title animate__animated animate__fadeInUp animation-1">Mi nombre es</div>
+  <h1 #asTitle class="title animate__animated animate__fadeInUp animation-2"></h1>
+  <h2 class="subtitlte animate__animated animate__fadeInUp animation-3">Soy Desarrollador Web</h2>
+  <p class="description animate__animated animate__fadeInUp animation-4">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt soluta, earum nemo eaque, hic laboriosam a eligendi veritatis, ipsum perspiciatis illum! Doloremque quam, sint nostrum accusantium atque iste repudiandae architecto.
+  </p>
+</div>
