--- a/Leifer_Mendez/proyectos/portafolio2/src/styles.scss
+++ b/Leifer_Mendez/proyectos/portafolio2/src/styles.scss
@@ -1,10 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
     --color-1:#1985a1;
-    --color-3:#4c5c68;
+    --color-2:#a2acb3;
 }
 
 html, body{
     margin: 0;
     padding: 0;
+    color: #FFFFFF;
+    background-color: var(--color-1);
+}
+
+
+@for $i from 1 through 100
+{
+    .animation-#{$i}{
+        animation-delay: #{$i/3}s
+    }
 }
