--- a/Leifer_Mendez/proyectos/portafolio2/src/app/app.component.html
+++ b/Leifer_Mendez/proyectos/portafolio2/src/app/app.component.html
@@ -1,1 +1,5 @@
 <app-header></app-header>
+<div class="d-flex flex-wrap">
+    <app-sidebar class="col-12 col-sm-12 col-md-6 col-lg-4"></app-sidebar>
+    <app-jobs class="col-12 col-sm-12 col-md-6 col-lg-8"></app-jobs>
+</div>
