--- a/Leifer_Mendez/proyectos/portafolio2/src/app/header/header.component.html
+++ b/Leifer_Mendez/proyectos/portafolio2/src/app/header/header.component.html
@@ -1,3 +1,17 @@
-<div class="wrapper">
-  
+<div class="wrapper animate__animated animate__fadeInDown">
+  <div class="section-1">
+    <div class="name">
+      <i class="uil uil-bug"></i>
+    </div>
+  </div>
+  <div class="section-2">
+    <div class="list-menu">
+      <div class="item-menu" *ngFor="let item of [1,1,1,1]; let i = index">
+        <span class="item-number">{{i}}</span>
+        <span class="link">
+          LINK
+        </span>
+      </div>
+    </div>
+  </div>
 </div>
